--- a/front-end/src/css/EventCard.css
+++ b/front-end/src/css/EventCard.css
@@ -35,15 +35,16 @@ body {
 .user-event-card-content {
     background-color: #151b23;
     color: rgb(255, 255, 255);
-    margin-top: -30px;
+    margin-top: -16px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     padding: 5px;
+    margin-bottom: 5px;
 }
 
 .user-event-card img {
     width: 100%;
-    height: 250px;
+    height: 200px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     overflow: hidden;
@@ -51,8 +52,13 @@ body {
 
 .user-event-card-content h2 {
     margin-left: 4px;
-    margin-top: 30px;
-    font-size: 1.3rem;
+    margin-top: 20px;
+    font-size: 1.4rem;
+    overflow: hidden;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
+
 }
 
 .user-left-content {
@@ -60,54 +66,43 @@ body {
 }
 
 .user-card-desc {
-    font-size: 15.2px;
+    font-size: 15px;
+    overflow: hidden;
+    margin-bottom: 5px;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
 }
 
 .user-card-date,
 .user-card-location {
-    font-size: 17px;
+    font-size: 16px;
+}
+
+.image-date {
+    display: flex;
+    flex-direction: column;
+}
+
+.date-div {
+    margin-top: -13px;
+    height: 22px;
+    background-color: #020202;
+}
+
+.date-div p {
+    margin-left: 10px;
 }
 
 .user-card-date {
-    margin-top: -8px;
+    color: white;
+
 }
 
 .user-card-location {
-    margin-top: -12px;
-}
-
-.user-card-date::before {
-    content: "Date: ";
-    font-weight: bold;
-}
-
-.user-card-location::before {
-    content: "Location: ";
-    font-weight: bold;
-}
-
-.user-card-button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: -10px;
-    padding: 5px;
-}
-
-.user-card-button button {
-    background-color: #238636;
-    color: white;
-    border-radius: 6px;
-    border: none;
-    padding: 6px;
-    min-width: 100px;
-    font-size: 16px;
-    cursor: pointer;
-    transition: transform 0.2s ease;
-}
-
-.user-card-button button:active {
-    transform: scale(0.96);
+    margin-top: -6px;
+    margin-bottom: 5px;
 }
 
 .user-no-events-message {
@@ -118,4 +113,221 @@ body {
     align-items: center;
     margin-top: 120px;
     font-size: 35px;
+}
+
+
+@media (max-width:1241px) {
+
+    .user-event-card-lists {
+        justify-content: center;
+        align-items: center;
+        margin-left: 50px;
+        margin-right: 0px;
+    }
+
+
+    .user-event-card-content h2 {
+        font-size: 1.1rem;
+    }
+
+
+    .user-card-desc {
+        font-size: 13px;
+    }
+
+    .user-card-date,
+    .user-card-location {
+        font-size: 15px;
+    }
+}
+
+@media (max-width:1025px) {
+
+    .user-event-card-lists {
+        justify-content: center;
+        align-items: center;
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+
+
+    .user-event-card-content h2 {
+        font-size: 1.1rem;
+    }
+
+
+    .user-card-desc {
+        font-size: 13px;
+    }
+
+
+}
+
+@media (max-width:950px) {
+
+    .user-event-card-content h2 {
+        font-size: 1rem;
+    }
+}
+
+@media (max-width:881px) {
+
+    .user-event-cards {
+        margin-top: -25px;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 20px;
+        padding: 25px;
+    }
+
+    .user-event-card-lists h1 {
+        margin-left: 25px;
+    }
+
+    .user-no-events-message {
+        font-size: 35px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+}
+
+@media (max-width:661px) {
+
+    .user-event-card-content h2 {
+        font-size: 15px;
+    }
+
+}
+
+@media (max-width:631px) {
+
+    .user-event-card-lists h1 {
+        margin-left: 20px;
+    }
+
+    .user-event-cards {
+        margin-top: -15px;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 10px;
+        padding: 20px;
+    }
+
+}
+
+@media (max-width:481px) {
+
+    .user-event-card-lists {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .user-event-card-content {
+        width: 186px;
+    }
+
+    .date-div {
+        width: 186px;
+    }
+
+    .user-event-card img {
+        width: 186px;
+        height: 250px;
+    }
+
+    .user-event-card-content h2 {
+        font-size: 1.2rem;
+        overflow: hidden;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        text-overflow: ellipsis;
+
+    }
+
+    .user-left-content {
+        margin-left: 5px;
+    }
+
+    .user-no-events-message {
+        font-size: 35px;
+    }
+}
+
+@media(max-width:431px) {
+
+    .user-event-card-lists {
+        margin-left: 10px;
+        margin-right: 5px;
+    }
+
+    .user-event-card-content {
+        width: 165px;
+    }
+
+    .date-div {
+        width: 165px;
+    }
+
+    .user-event-card img {
+        width: 165px;
+        height: 190px;
+    }
+
+    .user-event-card-content h2 {
+        font-size: 16px;
+    }
+}
+
+@media(max-width:391px) {
+
+    .user-event-card-lists {
+        margin-left: 1px;
+        margin-right: 1px;
+    }
+
+}
+
+@media (max-width:380px) {
+    
+     .user-event-card-lists {
+        margin-left: -4px;
+    }
+}
+
+@media (max-width:373px) {
+    .user-event-card-lists {
+        margin-left: -10px;
+    }
+    .user-event-card-content {
+        width: 165px;
+    }
+
+    .date-div {
+        width: 165px;
+    }
+
+    .user-event-card img {
+        width: 165px;
+        height: 250px;
+    }
+}
+
+@media (max-width:345px){
+
+    .user-event-card-content {
+        width: 150px;
+    }
+
+    .date-div {
+        width: 150px;
+    }
+
+    .user-event-card img {
+        width: 150px;
+        height: 190px;
+    }
+
+    .user-event-card-content h2 {
+        font-size: 15px;
+    }
 }
