--- a/front-end/src/admin/css/AddEvent.css
+++ b/front-end/src/admin/css/AddEvent.css
@@ -1,17 +1,29 @@
-/* .Add-events h1{
-  margin-top: 30px;
-  margin-left: 230px;
+
+.Addevent-h1{
+  display: flex;
+  position: fixed;
+  background-color: #0d1117;
+  margin-left: 240px;
+  height: 67px;
+  top: 0;
+  width: 100vw;
+}
+
+.Addevent-h1 h1 {
+  font-size: 1.5rem;
+  color: aliceblue;
+  margin-top: 15px;
+  margin-left: 20px;
   text-align: center;
-  align-items: center;
-} */
+}
 
 .event-upload-container {
-  margin-left: 250px; 
+  margin-left: 250px;
   align-items: center;
   justify-content: center;
   display: flex;
-  margin-top: 20px;
-  margin-bottom: 10px;
+  margin-top: 10px;
+  margin-bottom: 30px;
 }
 
 .event-upload-title {
@@ -29,8 +41,9 @@
   gap: 20px;
   background-color: #151b23;
   padding: 30px;
-  max-width: 550px;
-  border-radius: 12px;
+  margin-top: 80px;
+  max-width: 55vw;
+  border-radius: 5px;
   box-shadow: 0 0 12px rgba(0, 0, 0, 0.4);
 }
 
@@ -43,7 +56,7 @@
   padding: 10px;
   border-radius: 6px;
   font-size: 16px;
-  width: 500px;
+  width: 50vw;
 }
 
 .event-upload-container input[type="date"]::-webkit-calendar-picker-indicator {
@@ -64,7 +77,7 @@
 
 .event-textarea {
   resize: vertical;
-  min-height: 80px;
+  min-height: 100px;
 }
 
 .event-submit-button {
@@ -85,22 +98,117 @@
 .event-submit-button:hover {
   background-color: #2ea043;
 }
-.event-file-input{
-width: 240px !important;
-}
-.imageflex1,
-.imageflex2{
-display: flex;
-gap: 20px;
 
+.event-file-input {
+  width: 24.3vw !important;
+  cursor: pointer;
 }
 
-.labelflex1{
+.file-flex {
   display: flex;
-  gap: 160px;
+  gap: 15px;
 }
 
-.labelflex2{
+.label-flex1,
+.label-flex2 {
   display: flex;
-  gap: 200px;
+  gap: 20px;
+  flex-direction: column;
+}
+
+
+
+@media (max-width: 1025px) {
+  .event-upload-container {
+    margin-left: 200px;
+  }
+}
+
+@media (max-width: 1000px) {
+  .event-upload-container {
+    margin-left: 250px;
+  }
+
+  .event-upload-form {
+    max-width: 70vw;
+  }
+
+  .event-input,
+  .event-textarea,
+  .event-file-input {
+    width: 56vw;
+  }
+
+  .event-file-input {
+    width: 26.6vw !important;
+  }
+}
+
+@media (max-width: 769px) {
+  .event-upload-container {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  .event-upload-form {
+    max-width: 80vw;
+  }
+
+  .event-input,
+  .event-textarea,
+  .event-file-input {
+    width: 70vw;
+  }
+
+  .event-file-input {
+    width: 33.6vw !important;
+  }
+}
+
+@media (max-width: 530px) {
+  .event-upload-form {
+    max-width: 85vw;
+    margin-top: 60px;
+  }
+
+  .event-input,
+  .event-textarea,
+  .event-file-input {
+    width: 75vw;
+  }
+
+  .event-file-input {
+    width: 35.6vw !important;
+  }
+
+  .file-flex label {
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 450px) {
+  .event-upload-form {
+    max-width: 90vw;
+    gap: 10px;
+  }
+
+  .event-input,
+  .event-textarea,
+  .event-file-input {
+    width: 80vw;
+    margin-left: -10px;
+    font-size: 14px;
+  }
+
+  .event-file-input {
+    width: 38.6vw !important;
+    font-size: 12px;
+    height: 45px;
+  }
+
+  .event-submit-button {
+    padding: 8px;
+    width: 79vw;
+    margin-left: -10px;
+  }
 }
