--- a/front-end/src/admin/css/AdminEventDetails.css
+++ b/front-end/src/admin/css/AdminEventDetails.css
@@ -1,15 +1,27 @@
 .admin-event-detail {
   display: flex;
   justify-content: center;
-  margin-top: 20px;
+  margin-top: 55px;
   margin-left: 250px;
   margin-bottom: 0px;
   flex-direction: column;
   padding: 20px;
 }
 
-.admin-event-detail h1{
-    color: white;
+.admin-event-detail-h1 {
+  display: flex;
+  top: 0;
+  left: 240px;
+  width: 100vw;
+  color: white;
+  position: fixed;
+  z-index: 999;
+  background-color: #0d1117;
+}
+
+.admin-event-detail-h1 h1 {
+  margin-top: 10px;
+  margin-left: 30px;
 }
 
 .admin-event-images .carousel {
@@ -18,12 +30,12 @@
   overflow: hidden;
 }
 
-.admin-event-images{
-    display: flex;
-    gap: 100px;
+.admin-event-images {
+  display: flex;
+  gap: 100px;
 }
 
-.carousel-item img {  
+.carousel-item img {
   width: 100%;
   max-height: 58vh;
   image-rendering: crisp-edges;
@@ -102,4 +114,264 @@
 .btn-update:active,
 .btn-delete:active {
   transform: scale(0.96);
+}
+
+@media (max-width: 1300px) {
+  .admin-event-detail {
+    margin-left: 250px;
+  }
+
+  .admin-event-images .carousel {
+    width: 60vw;
+    max-width: 100%;
+    overflow: hidden;
+  }
+
+  .admin-event-images {
+    gap: 50px;
+  }
+}
+
+@media (max-width: 1205px) {
+  .admin-event-images .carousel {
+    width: 60vw;
+    max-height: 405px;
+    min-height: 405px;
+  }
+
+  .carousel-item img {
+    max-height: 405px;
+    min-height: 405px;
+  }
+
+  .admin-event-detail {
+    margin-left: 250px;
+  }
+
+  .admin-event-info-box {
+    margin-left: 10px;
+    width: 650px;
+  }
+
+  .admin-event-images {
+    gap: 20px;
+  }
+
+  .admin-event-title {
+    font-size: 1.6rem;
+  }
+}
+
+@media (max-width: 1013px) {
+  .admin-event-images .carousel {
+    margin-left: 10px;
+  }
+
+  .admin-event-info-box {
+    margin-left: 10px;
+    width: 65vw;
+  }
+
+  .admin-event-images {
+    gap: 20px;
+  }
+
+  .admin-event-title {
+    font-size: 1.5rem;
+  }
+
+  .admin-event-meta {
+    font-size: 16px;
+  }
+}
+
+@media (min-width: 938px) {
+  .mobile-only {
+    display: none;
+  }
+
+}
+
+@media (max-width: 937px) {
+  .admin-event-detail {
+    margin-top: 40px;
+    margin-bottom: 70px;
+  }
+
+  .admin-event-actions {
+    display: none;
+  }
+
+  .btn-update,
+  .btn-delete {
+    flex: 1;
+    padding: 10px;
+    font-size: 1rem;
+    border: none;
+    border-radius: 8px;
+    color: white;
+  }
+
+  .admin-event-images {
+    display: block;
+    margin-top: 10px;
+  }
+
+  .admin-event-images .carousel {
+    width: 93vw;
+    margin: 0 auto;
+    border-radius: 15px;
+  }
+
+  .admin-event-info-box {
+    margin-top: 10px;
+    font-size: 16px;
+    width: 100%;
+    margin-bottom: 10px;
+  }
+
+  .admin-event-actions {
+    display: none;
+  }
+
+  .admin-bottom-bar.mobile-only {
+    display: flex;
+    position: fixed;
+    bottom: 0;
+    left: 240px;
+    right: 0;
+    justify-content: center;
+    align-items: center;
+    background-color: #151b23;
+    padding: 6px;
+    box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.4);
+    z-index: 999;
+    gap: 10px;
+  }
+
+  .btn-update,
+  .btn-delete {
+    flex: 1;
+    padding: 10px;
+    font-size: 1rem;
+    max-width: 250px;
+    border: none;
+    border-radius: 8px;
+    color: white;
+  }
+}
+
+@media (max-width:769px) {
+  .admin-event-detail-h1 {
+    top: 50px;
+    left: 0px;
+  }
+
+  .admin-event-detail-h1 h1 {
+    margin-left: 20px;
+  }
+
+  .admin-event-detail {
+    margin-left: 10px;
+    margin-top: 90px;
+  }
+
+  .admin-bottom-bar.mobile-only {
+    left: 0px;
+    gap: 20px;
+  }
+}
+
+@media (max-width: 701px) {
+  .admin-event-images .carousel {
+    margin-bottom: 10px;
+     max-height: 315px !important;
+    min-height: 315px !important;
+  }
+
+  .carousel-item img {
+    max-height: 360px !important;
+    min-height: 360px !important;
+  }
+
+  .admin-event-info-box {
+    font-size: 14px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    margin-left: 18px;
+  }
+
+  .admin-event-meta {
+    margin-top: 0px;
+    margin-left: 0px;
+  }
+
+  .admin-event-description {
+    margin-left: 15px;
+  }
+}
+
+@media (max-width: 575px) {
+  .admin-event-detail {
+    margin-left: -4px;
+  }
+
+  .admin-event-detail-h1 h1 {
+    font-size: 22px;
+  }
+
+  .admin-event-images .carousel {
+    margin-bottom: 10px;
+    max-height: 315px;
+    min-height: 315px;
+    width: 90vw;
+  }
+
+  .carousel-item img {
+    max-height: 360px;
+    min-height: 360px;
+  }
+
+  .admin-event-info-box {
+    margin-top: 10px;
+  }
+
+  .admin-event-meta {
+    gap: 13px;
+  }
+
+  .admin-event-description {
+    margin-left: 6px;
+    margin-right: 10px;
+    min-width: 87vw;
+    max-width: 90vw;
+  }
+}
+
+@media (max-width: 431px) {
+  .admin-event-images .carousel {
+    margin-bottom: 10px;
+    margin-top: -10px;
+    max-height: 250px !important;
+    min-height: 250px !important;
+    overflow: hidden;
+    border-radius: 10px;
+  }
+
+  .carousel-item img {
+    max-height: 250px !important;
+    min-height: 250px !important;
+    overflow: hidden;
+    border-radius: 0px;
+  }
+
+  .admin-event-info-box {
+    margin-top: 5px;
+    width: 90vw;
+    margin-left: 8px;
+  }
+
+  .admin-bottom-bar.mobile-only {
+    bottom: -1.5px;
+  }
 }
