--- a/front-end/src/admin/css/AdminEvents.css
+++ b/front-end/src/admin/css/AdminEvents.css
@@ -1,20 +1,21 @@
-.admin-events {
-    margin-left: 140px;
-    padding: 20px;
-    background-color: #0d1117;
-}
-
 .admin-event-card-lists {
     justify-content: center;
     align-items: center;
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-left: 250px;
+    margin-right: 10px;
     margin-top: 50px;
 }
 
-.admin-event-card-header {
+.admin-event-card {
+    transition: transform 0.2s ease;
+}
+
+.admin-event-card:hover {
+    transform: scale(1.05);
+}
+
+.admin-event-card-lists h1 {
     color: white;
-    font-size: 2rem;
     margin-left: 35px;
     margin-top: 50px;
 }
@@ -22,102 +23,293 @@
 .admin-event-cards {
     margin-top: -30px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(4, 1fr);
     gap: 20px;
     padding: 30px;
 }
 
-.admin-event-card {
-    transition: transform 0.2s ease;
+.admin-event-card-content {
     background-color: #151b23;
-    border-radius: 10px;
-    overflow: hidden;
-}
-
-.admin-event-card:hover {
-    transform: scale(1.05);
+    color: rgb(255, 255, 255);
+    margin-top: -16px;
+    /* min-height: 140px;
+    max-height: 145px; */
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    padding: 5px;
+    margin-bottom: 5px;
 }
 
 .admin-event-card img {
     width: 100%;
     height: 200px;
-    object-fit: cover;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+    overflow: hidden;
 }
 
-.admin-event-card-content {
-    background-color: #151b23;
-    color: white;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    padding: 10px;
+.admin-event-card-content h2 {
+    margin-left: 4px;
+    margin-top: 20px;
+    font-size: 1.4rem;
+    overflow: hidden;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
 }
 
-.admin-card-title {
-    margin-top: -5px;
-    /* text-align: center; */
-    font-size: 1.3rem;
+.admin-left-content {
+    margin-left: 5px;
 }
 
+.admin-card-desc {
+    font-size: 15px;
+    overflow: hidden;
+    margin-bottom: 5px;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
+}
+
+.admin-card-date,
+.admin-card-location {
+    font-size: 16px;
+}
+
+.admin-image-date {
+    display: flex;
+    flex-direction: column;
+}
+
+.admin-date-div {
+    margin-top: -13px;
+    height: 22px;
+    background-color: #020202;
+}
+
+.admin-date-div p {
+    margin-left: 10px;
+}
 
 .admin-card-date {
-    font-size: 17px;
-    margin-top: -3px;
+    color: white;
 }
 
 .admin-card-location {
-    font-size: 17px;
-    margin-top: -15px;
+    margin-top: -6px;
+    margin-bottom: 5px;
 }
 
-.admin-card-date::before {
-    content: "Date: ";
-    font-weight: bold;
-}
-
-.admin-card-location::before {
-    content: "Location: ";
-    font-weight: bold;
-}
-
-.admin-card-button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: -10px;
-    padding: 5px;
-}
-
-.admin-card-button button {
-    background-color: #238636;
-    color: white;
-    border-radius: 6px;
-    border: none;
-    padding: 6px;
-    min-width: 100px;
-    font-size: 16px;
-    cursor: pointer;
-    transition: transform 0.2s ease;
-}
-
-.admin-card-button button:active {
-    transform: scale(0.96);
-}
-
-.admin-no-events-container {
+.admin-no-events-message {
+    color: #837474;
     display: flex;
     text-align: center;
     justify-content: center;
     align-items: center;
     margin-top: 120px;
-}
-
-.admin-no-events-message {
-    color: #837474;
     font-size: 35px;
 }
 
-.admin-event-content filter{
-    margin-top: 0px;
+/* Media Queries */
+
+@media (max-width:1241px) {
+    .admin-event-card-lists {
+        justify-content: center;
+        align-items: center;
+        margin-left: 250px;
+        margin-right: 0px;
+    }
+
+    .admin-event-card-content h2 {
+        font-size: 1.1rem;
+    }
+
+    .admin-card-desc {
+        font-size: 13px;
+    }
+
+    .admin-card-date,
+    .admin-card-location {
+        font-size: 15px;
+    }
+}
+
+@media (max-width:1025px) {
+    .admin-event-cards {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .admin-event-card-lists {
+        justify-content: center;
+        align-items: center;
+        margin-left: 230px;
+        margin-right: 0px;
+    }
+
+    .admin-event-card-content h2 {
+        font-size: 1.1rem;
+    }
+
+    .admin-card-desc {
+        font-size: 13px;
+    }
+}
+
+@media (max-width:950px) {
+    .admin-event-card-content h2 {
+        font-size: 1rem;
+    }
+}
+
+@media (max-width:881px) {
+    .admin-event-cards {
+        margin-top: -25px;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 20px;
+        padding: 25px;
+    }
+
+    .admin-event-card-lists h1 {
+        margin-left: 25px;
+    }
+
+    .admin-no-events-message {
+        font-size: 35px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
+@media (max-width:769px) {
+    .admin-event-card-lists {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+}
+
+@media (max-width:661px) {
+    .admin-event-card-content h2 {
+        font-size: 15px;
+    }
+}
+
+@media (max-width:631px) {
+    .admin-event-card-lists h1 {
+        margin-left: 20px;
+    }
+
+    .admin-event-cards {
+        margin-top: -15px;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 10px;
+        padding: 20px;
+    }
+}
+
+@media (max-width:481px) {
+    .admin-event-card-lists {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .admin-event-card-content {
+        width: 186px;
+    }
+
+    .admin-date-div {
+        width: 186px;
+    }
+
+    .admin-event-card img {
+        width: 186px;
+        height: 250px;
+    }
+
+    .admin-event-card-content h2 {
+        font-size: 1.2rem;
+        overflow: hidden;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        text-overflow: ellipsis;
+    }
+
+    .admin-left-content {
+        margin-left: 5px;
+    }
+
+    .admin-no-events-message {
+        font-size: 35px;
+    }
+}
+
+@media(max-width:431px) {
+    .admin-event-card-lists {
+        margin-left: 10px;
+        margin-right: 5px;
+    }
+
+    .admin-event-card-content {
+        width: 165px;
+    }
+
+    .admin-date-div {
+        width: 165px;
+    }
+
+    .admin-event-card img {
+        width: 165px;
+        height: 170px;
+    }
+
+    .admin-event-card-content h2 {
+        font-size: 16px;
+    }
+}
+
+@media(max-width:391px) {
+    .admin-event-card-lists {
+        margin-left: 1px;
+        margin-right: 1px;
+    }
+}
+
+@media (max-width:380px) {
+    .admin-event-card-lists {
+        margin-left: -4px;
+    }
+}
+
+@media (max-width:373px) {
+    .admin-event-card-lists {
+        margin-left: -10px;
+    }
+
+    .admin-event-card-content {
+        width: 165px;
+    }
+
+    .admin-date-div {
+        width: 165px;
+    }
+}
+
+@media (max-width:346px) {
+    .admin-event-card img {
+        width: 155px;
+        height: 170px;
+    }
+
+    .admin-event-card-content {
+        width: 155px;
+    }
+
+    .admin-date-div {
+        width: 155px;
+    }
+
+    .admin-event-card-content h2 {
+        font-size: 15px;
+    }
 }
