--- a/front-end/src/admin/css/AdminSidebar.css
+++ b/front-end/src/admin/css/AdminSidebar.css
@@ -13,7 +13,7 @@
   justify-content: space-between;
 }
 
-.adminhr{
+.adminhr {
   margin-top: -15px;
   width: 240px;
   margin-left: -20px;
@@ -21,6 +21,7 @@
   border: none;
   background: linear-gradient(to right, #065dc7, #2ef72e);
 }
+
 .admin-sidebar h2 {
   margin-bottom: 30px;
   font-size: 1.5rem;
@@ -59,7 +60,7 @@
   color: #fff;
 }
 
-.logout-button{
+.logout-button {
   display: flex;
   margin-top: auto;
   width: 220px;
@@ -78,10 +79,125 @@
   border-radius: 5px;
 }
 
-.logout-button button:active{
+.logout-button button:active {
   transform: scale(0.98);
 }
 
 .logout-button button:hover {
   background-color: #cc3a3a;
+}
+
+.admin-sidebar-toggle {
+  position: fixed;
+  top: 15px;
+  left: 15px;
+  bottom: 0;
+  z-index: 1000;
+  background-color: #151b23;
+  color: white;
+  padding: 10px 12px;
+  border-radius: 5px;
+  cursor: pointer;
+  display: none;
+}
+
+.admin-overlay {
+  position: fixed;
+  top: 50px;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.4);
+  z-index: 1000;
+  display: block;
+}
+
+.admin-topbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  background-color: #151b23;
+  display: flex;
+  align-items: center;
+  padding: 10px 20px;
+  color: white;
+  z-index: 999
+}
+
+.bar-icon {
+  font-size: 1.4rem;
+  cursor: pointer;
+  margin-right: 10px;
+  transition: transform 0.2s ease;
+}
+
+.bar-icon:hover {
+  color: #04871f;
+}
+
+.bar-icon:active {
+  transform: scale(0.96);
+}
+
+
+.page-name {
+  font-size: 1.4rem;
+  font-weight: 500;
+  color: #04871f;
+
+}
+
+
+@media (max-width: 769px) {
+  .admin-sidebar {
+    position: fixed;
+    top: 0px;
+    bottom: auto;
+    left: -260px;
+    width: 240px;
+    height: 100vh;
+    transition: left 0.3s ease;
+    z-index: 1000;
+  }
+
+  .admin-sidebar.open {
+    left: 0;
+  }
+
+}
+
+@media (min-width: 769px) {
+  .admin-overlay {
+    display: none;
+  }
+
+  .admin-topbar {
+    display: none;
+  }
+}
+
+@media (max-width: 600px) {
+  .admin-sidebar {
+    width: 200px;
+  }
+
+  .admin-sidebar h2 {
+    font-size: 18px;
+  }
+
+  .adminhr{
+      width: 200px;
+  }
+
+.admin-sidebar nav ul li {
+  width: 200px;
+  font-size: 16px;
+}
+
+.logout-button {
+  width: 185px;
+}
+
 }
