--- a/front-end/src/admin/css/AllUsers.css
+++ b/front-end/src/admin/css/AllUsers.css
@@ -1,16 +1,35 @@
 .user-list-container {
-  margin-left: 100px;
-  padding: 30px;
+  margin-left: 260px;
+  margin-right: 30px;
+  margin-top: 90px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: white;
 }
 
 .user-list-title {
-  font-size: 28px;
+  display: flex;
+  position: fixed;
+  width: 100vw;
+  height: 67px;
+  margin-left: 240px;
+  top: 0;
+  background-color: #0d1117;
+  color: aliceblue;
+  padding: 1px;
+  z-index: 1000;
+}
+
+.user-list-title h1 {
+  margin-left: 20px;
+  margin-top: 25px;
   margin-bottom: 20px;
+  font-size: 1.5rem;
 }
 
 .user-table {
-  width: 100%;
+  width: 100vw;
   border-collapse: collapse;
   background-color: #151b23;
   color: white;
@@ -22,6 +41,7 @@
 .user-table td {
   padding: 15px;
   text-align: left;
+  gap: 10px;
   border-bottom: 1px solid #2c2f36;
 }
 
@@ -34,15 +54,110 @@
 }
 
 .user-details-button {
-  padding: 6px 12px;
+  width: 100px;
+  height: 33px;
   background-color: #238636;
   color: white;
   border: none;
   border-radius: 6px;
   cursor: pointer;
-  transition: background-color 0.3s ease;
+  transition: transform 0.2s ease;
+}
+
+.user-details-mobile-button {
+  display: none;
+}
+
+.user-details-button:active {
+  transform: scale(0.96);
 }
 
 .user-details-button:hover {
-  background-color: #1bcb11;
+  background-color: rgb(71, 156, 71);
+}
+
+@media (max-width:855px) {
+
+  .user-table th {
+    font-size: 15px;
+  }
+
+  .user-table tr {
+    font-size: 14px;
+  }
+}
+
+@media (max-width:769px) {
+  .user-list-container {
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-top: 80px;
+  }
+
+  .user-list-title {
+    display: none;
+  }
+}
+
+@media (max-width:584px) {
+  .user-list-container {
+    margin-top: 80px;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+}
+
+@media (max-width:544px) {
+  .user-list-container {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  .eventreg-th {
+    display: none;
+  }
+}
+
+@media (max-width:430px) {
+
+  .action-head {
+    display: none;
+  }
+
+  .user-details-button-td {
+    display: none;
+  }
+
+  .email-th{
+    display: flex;
+    justify-content: center;
+  }
+  .email-td {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .user-details-mobile-button {
+    display: flex;
+    background-color: #238636;
+    width: 40px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    border-radius: 15px;
+    padding: 3px;
+    color: aliceblue;
+    font-size: 16px;
+    cursor: pointer;
+    transition: transform 0.2s ease;
+  }
+
+  .user-details-mobile-button:active{
+    transform: scale(0.96);
+  }
+  .user-details-mobile-button:hover{
+    background-color: #0aa92a;
+  }
+
 }
