--- a/front-end/src/css/EventDetail.css
+++ b/front-end/src/css/EventDetail.css
@@ -9,7 +9,7 @@
   display: flex;
   width: 55vw;
   overflow: hidden;
-  margin-top: 60px;
+  margin-top: 70px;
   border-radius: 15px;
   margin-left: 120px;
 }
@@ -50,6 +50,7 @@
 .h1 h1 {
   font-size: 1.8rem;
   margin-left: 140px;
+  margin-top: 10px;
   display: block;
   text-align: left;
 
@@ -176,6 +177,18 @@
 .eventd-info p {
   margin-top: 15px;
 }
+
+.event-detail-error {
+  display: flex;
+  margin-top: 230px;
+  padding: 100px;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  color: red;
+  font-size: 1rem;
+}
+
 
 @media(max-width:1399px) {
 
@@ -355,7 +368,7 @@
     padding: 10px;
     justify-content: center;
     box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.4);
-    z-index: 1000;
+    z-index: 999;
   }
 
   .event-detail button.eventreg {
@@ -423,6 +436,7 @@
     max-height: 360px !important;
     min-height: 360px !important;
   }
+
   .h1 h1 {
     margin-left: 20px;
   }
@@ -439,6 +453,9 @@
     margin-left: 18px;
   }
 
+  .event-detail-error h2{
+    font-size: 18px;
+  }
 }
 
 @media(max-width:575px) {
@@ -465,12 +482,17 @@
     width: 90vw;
   }
 
+  .event-detail-error h2{
+    font-size: 18px;
+    margin-left: -90px;
+    margin-right: -90px;
+  }
 }
 
 @media (max-width: 431px) {
   .eventd-img .carousel {
     margin-bottom: 10px;
-    margin-top: -10px;
+    margin-top: -5px;
     max-height: 250px !important;
     min-height: 250px !important;
     overflow: hidden;
