--- a/front-end/src/admin/css/AdminSidebar.css
+++ b/front-end/src/admin/css/AdminSidebar.css
@@ -174,6 +174,13 @@
     display: none;
   }
 
+  .admin-sidebar {
+    position: fixed;
+    top: 0px;
+    bottom: auto;
+    z-index: 1003;
+  }
+
   .admin-topbar {
     display: none;
   }
@@ -182,23 +189,24 @@
 @media (max-width: 600px) {
   .admin-sidebar {
     width: 200px;
+    z-index: 1003;
   }
 
   .admin-sidebar h2 {
     font-size: 18px;
   }
 
-  .adminhr{
-      width: 200px;
+  .adminhr {
+    width: 200px;
   }
 
-.admin-sidebar nav ul li {
-  width: 200px;
-  font-size: 16px;
-}
+  .admin-sidebar nav ul li {
+    width: 200px;
+    font-size: 16px;
+  }
 
-.logout-button {
-  width: 185px;
-}
+  .logout-button {
+    width: 185px;
+  }
 
 }
