--- a/front-end/src/admin/css/UserRegistration.css
+++ b/front-end/src/admin/css/UserRegistration.css
@@ -50,8 +50,11 @@
   overflow: hidden;
 }
 
+.user-registration-container h2{
+  text-align: center;
+}
 .user-registration-table {
-  margin-top: 60px;
+  margin-top: 20px;
   width: 100%;
   border-collapse: collapse;
   background-color: #151b23;
@@ -71,11 +74,35 @@
   background-color: #1e232a;
 }
 
-.user-registration-table tbody tr{
-      cursor: pointer;
+.user-registration-table tbody tr {
+  cursor: pointer;
 }
+
 .user-registration-table tbody tr:hover {
   background-color: #2c2f36;
+}
+
+.useri-flex-box {
+  margin-left: 260px;
+  margin-right: 30px;
+  margin-top: 80px;
+  color: aliceblue;
+  background-color: #151b23;
+  border-radius: 10px;
+}
+
+.useri-flex-box h2 {
+  text-align: center;
+  background-color: #2c2f36;
+  padding: 10px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.user-info-box {
+  background-color: #151b23;
+  padding: 10px;
+  border-radius: 10px;
 }
 
 @media (max-width:1105px) {
@@ -96,6 +123,9 @@
     display: none;
   }
 
+  .user-registration-container{
+    margin-top: 10px;
+  }
 }
 
 @media (max-width:769px) {
@@ -105,6 +135,10 @@
   }
 
   .user-registration-container {
+    margin-left: 15px;
+    margin-right: 10px;
+  }
+  .useri-flex-box{
     margin-left: 15px;
     margin-right: 10px;
   }
@@ -171,11 +205,12 @@
     font-size: 13px;
   }
 
-   .user-registration-table td {
+  .user-registration-table td {
     padding: 1px 0;
   }
 
 }
+
 @media (max-width: 350px) {
 
   .user-registration-table,
