--- a/front-end/src/css/CustomDatePicker.css
+++ b/front-end/src/css/CustomDatePicker.css
@@ -1,5 +1,17 @@
+.air-datepicker{
+    z-index: 1007;
+    margin-top: -30px;
+}
+.datepicker-overlay {
+  position: fixed;
+  inset: 0;
+  background-color: transparent; 
+  z-index: 1006; 
+}
+
 .fontc-icon{
     margin-left: -20px;
     color: rgb(191, 197, 202);
     cursor: pointer;
 }
+
